--- a/RShop/Views/Account/Register.cshtml
+++ b/RShop/Views/Account/Register.cshtml
@@ -1,46 +1,47 @@
-﻿@model RShop.Models.RegisterViewModel
+﻿
+@model RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
 }
 
-<h1>ثبت نام  در سایت</h1>
+<h1>Register</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        @if(User.Identity.IsAuthenticated)
-            {
-                <div class="alert alert-danger">
-                    شما دسترسی ندارید
-                </div>
-            }
-        <form asp-action="Register">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RePassword" class="control-label"></label>
-                <input asp-for="RePassword" class="form-control" />
-                <span asp-validation-for="RePassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="ثبت نام" class="btn btn-success" />
-            </div>
-        </form>
-    </div>
+<div>
+    <form asp-controller="Account" asp-action="Register" method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+
+        <label asp-for="UserName" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="UserName" class="form-control" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
+        </div>
+
+        <label asp-for="Email" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <label asp-for="Password" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+
+        <label asp-for="RePassword" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="RePassword" class="form-control" />
+            <span asp-validation-for="RePassword" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">ثبت نام</button>
+        </div>
+    </form>
 </div>
 
 
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
