--- a/RShop/Views/Account/SuccessRegister.cshtml
+++ b/RShop/Views/Account/SuccessRegister.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterViewModel
 @{
-    ViewData["Title"] = "SuccesssRegister";
+    ViewData["Title"] = "SuccessRegister";
 }
 
 <h1>ثبت نام با موفقیت انجام شد</h1>
