--- a/RShop/Views/Home/Component/ShowProductByGroup.cshtml
+++ b/RShop/Views/Home/Component/ShowProductByGroup.cshtml
@@ -1,7 +1,6 @@
-﻿
-@model IEnumerable<Product>
+﻿@model IEnumerable<Product>
 @{
-    ViewData["Title"] = "کالا " + ViewData["Name"];
+    ViewData["Title"] = "کالا "+ ViewData["Name"];
 }
 <div class="row">
     <h1>
@@ -15,3 +14,4 @@
 
 
 </div>
+
