--- a/RShop/Views/Account/Register.cshtml
+++ b/RShop/Views/Account/Register.cshtml
@@ -7,38 +7,43 @@
 
 <h1>Register</h1>
 
-<div>
-    <form asp-controller="Account" asp-action="Register" method="post">
-        <div asp-validation-summary="ModelOnly"></div>
+<div class="row">
+    <div class="col-md-8">
+        <img src=""/>
+    </div>
+    <div class="col-md-4">
+        <form asp-controller="Account" asp-action="Register" method="post">
+            <div asp-validation-summary="ModelOnly"></div>
 
-        <label asp-for="UserName" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="UserName" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
+            <label asp-for="UserName" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
 
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
 
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
+            <label asp-for="Password" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
 
-        <label asp-for="RePassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="RePassword" class="form-control" />
-            <span asp-validation-for="RePassword" class="text-danger"></span>
-        </div>
+            <label asp-for="RePassword" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="RePassword" class="form-control" />
+                <span asp-validation-for="RePassword" class="text-danger"></span>
+            </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">ثبت نام</button>
-        </div>
-    </form>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">ثبت نام</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 
