--- a/RShop/Views/Account/Register.cshtml
+++ b/RShop/Views/Account/Register.cshtml
@@ -8,10 +8,7 @@
 <h1>Register</h1>
 
 <div class="row">
-    <div class="col-md-8">
-        <img src=""/>
-    </div>
-    <div class="col-md-4">
+
         <form asp-controller="Account" asp-action="Register" method="post">
             <div asp-validation-summary="ModelOnly"></div>
 
@@ -25,6 +22,11 @@
             <div class="col-md-10">
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <label asp-for="PhoneNumber" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
 
             <label asp-for="Password" class="col-md-2 control-label"></label>
@@ -43,7 +45,6 @@
                 <button type="submit" class="btn btn-primary">ثبت نام</button>
             </div>
         </form>
-    </div>
 </div>
 
 
